--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,9 @@
 ---
 
 @import "{{ site.theme }}";
-body {font-size: 2em; }
+.body {
+    font-size: 2em;
+}
 .wrapper {
     min-width: 640px;
     max-width: 900px;
