--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,8 @@
 ---
 
 @import "{{ site.theme }}";
-.body {
-    font-size: 2em;
+body {
+    font:18px/2.0 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .wrapper {
     min-width: 640px;
